# Rust-Detect-AI

./: .gitignore  README.md
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.css  App.tsx
client/src/components/: Camera.tsx
client/src/model/: m.d.ts  m.js  m_bg.wasm.d.ts
client/src/workers/: yoloWorker.js  yoloWorker.ts
src/: App.css  App.tsx
src/components/: Camera.tsx  DetectionStats.tsx
yolo_wasm/: Cargo.toml  Makefile
yolo_wasm/src/: app.rs  model.rs  worker.rs
