[package]
name = "yolo-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
candle-core = "0.7.1"
candle-nn = "0.7.1"
getrandom = { version = "0.2", features = ["js"] }
image = "0.25.2"
log = "0.4.22"
web-sys = { version = "0.3.70", features = ["ImageData", "Performance", "HtmlCanvasElement", "HtmlImageElement", "CanvasRenderingContext2d", "TextMetrics"] }
wasm-bindgen-futures = "0.4.43"
yew-agent = "0.2.0"
yew = { version = "0.20.0", features = ["csr"] }
anyhow = "1.0"
safetensors = "0.4.5"
wasm-logger = "0.2"
console_error_panic_hook = "0.1"

[lib]
crate-type = ["cdylib", "rlib"]
